tests/error/fptr_call_decl.gw
#! [contains] Can't call late function pointer at declaration site
funcdef void test(int);
(var test t)(2);
